<resources>
    <string name="app_name" translatable="false">"Kriptofolio"</string>
    <string name="app_version_full" translatable="false">"v1.1.0"</string>
    <string name="app_version_demo" translatable="false">"v1.1.0 DEMO"</string>
    <string name="app_subtitle_full" translatable="false">""</string>
    <string name="app_subtitle_demo" translatable="false">"DEMO"</string>
    <string name="action_settings">"Settings"</string>
    <string name="retry">"Retry"</string>
    <string name="unable_refresh">"Unable to refresh."</string>
    <string name="unable_get_data">"Unable to get data. Please press retry button to try again."</string>
    <string name="unknown_error">"Unknown error."</string>
    <string name="undo">"Undo"</string>
    <string name="deleted">"Deleted: %1$d"</string>
    <string name="time_format_am">"AM"</string>
    <string name="time_format_pm">"PM"</string>
    <string name="no_application_handle">"No application can handle this request."</string>
    <string name="install_web_browser">"Please install a web browser."</string>
    <string name="install_email">"Please install an email client and contact %s."</string>
    <string name="string_total_value_holdings">"Total holdings value"</string>
    <string name="string_total_value_on_date_time">" (%1$s UTC)"</string>
    <string name="string_total_value_change_24h_label">"24 h "</string>
    <string name="string_total_value_change_24h" translatable="false">" $ 0.00 "</string>
    <string name="string_separator_value" translatable="false">"/"</string>
    <string name="string_crypto_value" translatable="false">"₿ 0.00000000"</string>
    <string name="string_fiat_value" translatable="false">"$ 0.00"</string>
    <string name="string_separator_code" translatable="false">"/"</string>
    <string name="string_crypto_code" translatable="false">"BTC"</string>
    <string name="string_no_number" translatable="false">"― ― ―"</string>
    <string name="default_crypto_code" translatable="false">"BTC"</string>
    <string name="default_crypto_sign" translatable="false">"₿"</string>
    <string name="string_crypto_list_empty_primary">"Your owned crypto coins list is empty!"</string>
    <string name="string_crypto_list_empty_secondary">"Add your crypto via the + button below."</string>
    <string name="string_column_coin_ranking" translatable="false">"↑↓"</string>
    <string name="string_column_coin_crypto_hold_amount_symbol">"Crypto coin\nAmount &#38; symbol"</string>
    <string name="string_column_coin_fiat_price_amount">"Price %1$s\nAmount %2$s"</string>
    <string name="string_column_coin_change_24h_1h_7d">"± price %% 1 h / 7 d\n± price %% 24 h\n± amount %1$s 24 h"</string>
    <string name="string_column_coin_separator_change" translatable="false">" / "</string>
    <string name="sample_text_column_coin_fiat_price_amount">"Price $\nAmount $"</string>
    <string name="sample_text_column_coin_change_24h_1h_7d">"± price % 1 h / 7 d\n± price % 24 h\n± amount $ 24 h"</string>
    <string name="sample_text_total_value_on_date_time">"Total holdings value (11/03/2018 12:55:08 UTC)"</string>
    <string name="sample_text_total_value_change_24h" translatable="false">" $ +1538.00 "</string>
    <string name="sample_text_crypto_value" translatable="false">"₿ 1.00000000"</string>
    <string name="sample_text_fiat_value" translatable="false">"$ 7,618.85"</string>
    <string name="sample_text_item_icon" translatable="false">"MMM"</string>
    <string name="sample_text_item_name" translatable="false">"Quantum Resistant Ledger"</string>
    <string name="sample_text_item_ranking" translatable="false">"1001"</string>
    <string name="sample_text_item_amount_code" translatable="false">"0.56822348 BITSILVER"</string>
    <string name="sample_text_item_price_fiat" translatable="false">"94,893,149,774.13 USD"</string>
    <string name="sample_text_item_amount_fiat" translatable="false">"20,758,463.13 USD"</string>
    <string name="sample_text_item_price_percent_change_1h_7d" translatable="false">"-901.94% / -10909.09%"</string>
    <string name="sample_text_item_price_percent_change_24h" translatable="false">"+4.25%"</string>
    <string name="sample_text_item_amount_fiat_change_24h" translatable="false">"+1,053.12 USD"</string>
    <string-array name="fiat_currency_code_array" translatable="false">
        <item>"&usd;"</item>
        <item>"&all;"</item>
        <item>"&dzd;"</item>
        <item>"&ars;"</item>
        <item>"&amd;"</item>
        <item>"&aud;"</item>
        <item>"&azn;"</item>
        <item>"&bhd;"</item>
        <item>"&bdt;"</item>
        <item>"&byn;"</item>
        <item>"&bmd;"</item>
        <item>"&bob;"</item>
        <item>"&bam;"</item>
        <item>"&brl;"</item>
        <item>"&bgn;"</item>
        <item>"&khr;"</item>
        <item>"&cad;"</item>
        <item>"&clp;"</item>
        <item>"&cny;"</item>
        <item>"&cop;"</item>
        <item>"&crc;"</item>
        <item>"&hrk;"</item>
        <item>"&cup;"</item>
        <item>"&czk;"</item>
        <item>"&dkk;"</item>
        <item>"&dop;"</item>
        <item>"&egp;"</item>
        <item>"&eur;"</item>
        <item>"&gel;"</item>
        <item>"&ghs;"</item>
        <item>"&gtq;"</item>
        <item>"&hnl;"</item>
        <item>"&hkd;"</item>
        <item>"&huf;"</item>
        <item>"&isk;"</item>
        <item>"&inr;"</item>
        <item>"&idr;"</item>
        <item>"&irr;"</item>
        <item>"&iqd;"</item>
        <item>"&ils;"</item>
        <item>"&jmd;"</item>
        <item>"&jpy;"</item>
        <item>"&jod;"</item>
        <item>"&kzt;"</item>
        <item>"&kes;"</item>
        <item>"&kwd;"</item>
        <item>"&kgs;"</item>
        <item>"&lbp;"</item>
        <item>"&mkd;"</item>
        <item>"&myr;"</item>
        <item>"&mur;"</item>
        <item>"&mxn;"</item>
        <item>"&mdl;"</item>
        <item>"&mnt;"</item>
        <item>"&mad;"</item>
        <item>"&mmk;"</item>
        <item>"&nad;"</item>
        <item>"&npr;"</item>
        <item>"&twd;"</item>
        <item>"&nzd;"</item>
        <item>"&nio;"</item>
        <item>"&ngn;"</item>
        <item>"&nok;"</item>
        <item>"&omr;"</item>
        <item>"&pkr;"</item>
        <item>"&pab;"</item>
        <item>"&pen;"</item>
        <item>"&php;"</item>
        <item>"&pln;"</item>
        <item>"&gbp;"</item>
        <item>"&qar;"</item>
        <item>"&ron;"</item>
        <item>"&rub;"</item>
        <item>"&sar;"</item>
        <item>"&rsd;"</item>
        <item>"&sgd;"</item>
        <item>"&zar;"</item>
        <item>"&krw;"</item>
        <item>"&ssp;"</item>
        <item>"&ves;"</item>
        <item>"&lkr;"</item>
        <item>"&sek;"</item>
        <item>"&chf;"</item>
        <item>"&thb;"</item>
        <item>"&ttd;"</item>
        <item>"&tnd;"</item>
        <item>"&try;"</item>
        <item>"&ugx;"</item>
        <item>"&uah;"</item>
        <item>"&aed;"</item>
        <item>"&uyu;"</item>
        <item>"&uzs;"</item>
        <item>"&vnd;"</item>
    </string-array>
    <string name="pref_general_category_title">"General"</string>
    <string name="pref_language_title">"Language"</string>
    <string name="pref_language_key" translatable="false">"preference language"</string>
    <string name="pref_default_language_entry">"English"</string>
    <string name="pref_default_language_value">"EN"</string>
    <string name="pref_fiat_currency_title">"Fiat currency"</string>
    <string name="pref_fiat_currency_key" translatable="false">"preference fiat currency"</string>
    <string name="pref_default_fiat_currency_entry">"&usd; - United States Dollar ($)"</string>
    <string name="pref_default_fiat_currency_value">"&usd;"</string>
    <string name="pref_date_format_title">"Date format"</string>
    <string name="pref_date_format_key" translatable="false">"preference date format"</string>
    <string name="pref_default_date_format_entry">"dd/MM/yyyy"</string>
    <string name="pref_default_date_format_value">"dd/MM/yyyy"</string>
    <string name="pref_24h_switch_title">"Use 24-hour format"</string>
    <string name="pref_24h_switch_key" translatable="false">"preference 24h switch"</string>
    <string name="pref_24h_switch_24h_summary" translatable="false">"13:00"</string>
    <string name="pref_24h_switch_12h_summary">"01:00 PM"</string>
    <string name="pref_support_category_title">"Support"</string>
    <string name="pref_rate_app_title">"Rate app in Google Play"</string>
    <string name="pref_rate_app_key" translatable="false">"rate app"</string>
    <string name="pref_share_app_title">"Share with your friends"</string>
    <string name="pref_share_app_key" translatable="false">"share app"</string>
    <string name="pref_donate_view_key" translatable="false">"preference donate view"</string>
    <string name="pref_donate_view_title">"Donate your view"</string>
    <string name="pref_donate_view_summary">"Just watch short video ad"</string>
    <string name="pref_donate_crypto_key" translatable="false">"preference donate crypto"</string>
    <string name="pref_donate_crypto_title">"Donate with crypto"</string>
    <string name="pref_donate_crypto_summary">"Send your Bitcoin or Etherium"</string>
    <string name="pref_buy_me_coffee_key" translatable="false">"buy me coffee"</string>
    <string name="pref_buy_me_coffee_title">"Buy me a coffee"</string>
    <string name="pref_contact_title">"Contact"</string>
    <string name="pref_contact_summary">"Have any feedback? Email your questions, suggestions, bug reports"</string>
    <string name="pref_contact_key" translatable="false">"contact"</string>
    <string name="pref_support_about_title">"About"</string>
    <string name="pref_website_title">"Website"</string>
    <string name="pref_website_summary" translatable="false">"kriptofolio.app"</string>
    <string name="pref_website_key" translatable="false">"website"</string>
    <string name="pref_author_title">"Author Andrius Baruckis"</string>
    <string name="pref_author_summary" translatable="false">"www.baruckis.com"</string>
    <string name="pref_author_key" translatable="false">"author"</string>
    <string name="pref_source_title">"View source on"</string>
    <string name="pref_source_summary" translatable="false">"GitHub"</string>
    <string name="pref_source_key" translatable="false">"source"</string>
    <string name="pref_privacy_policy_title">"Privacy policy"</string>
    <string name="pref_privacy_policy_key" translatable="false">"privacy policy"</string>
    <string name="pref_third_party_software_title">"Third-party software"</string>
    <string name="pref_third_party_software_summary">"Free &#38; open source licenses"</string>
    <string name="pref_third_party_software_key" translatable="false">"third party software"</string>
    <string name="pref_license_title">"License"</string>
    <string name="pref_license_summary">"Copyright"</string>
    <string name="pref_license_key" translatable="false">"license"</string>
    <string name="pref_app_title" translatable="false">@string/app_name</string>
    <string name="pref_app_summary" translatable="false">@string/app_version</string>
    <string name="button_read_license">"Read license"</string>
    <string name="button_project_link">"Project link"</string>
    <string name="library_license_name_apache_v2" translatable="false">"Apache 2.0"</string>
</resources>